170_supply_chain_security/sbom-operator/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: kube-system
spec:
  rules:
  - host: prometheus.docker-setup.inmylab.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring
  namespace: kube-system
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`prometheus.docker-setup.inmylab.de`)
    kind: Rule
    services:
    - name: prometheus-operated
      port: 9090
  - match: Host(`grafana.docker-setup.inmylab.de`)
    kind: Rule
    services:
    - name: grafana
      port: 80
